--- a/changelog
+++ b/changelog
@@ -1,4 +1,22 @@
-commit 0aa31ded5bc4bdf474479b9595dc9bf570da2cda (HEAD, origin/master, origin/HEAD, master)
+commit b8d215941298bd371008cb37e6b8fe1cfffb041c (HEAD, origin/master, origin/HEAD, master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Mon Jul 27 19:24:35 2015 -0430
+
+    * versiones 2
+
+commit 7f470919fa89c7d2d404d4b67b143e7f2f877d87
+Author: jose perez <sinfallas@gmail.com>
+Date:   Mon Jul 27 19:23:15 2015 -0430
+
+    * versiones
+
+commit b612b03f33f7af8c5290c938a184a5794ee67592
+Author: jose perez <sinfallas@gmail.com>
+Date:   Wed Jul 22 13:11:32 2015 -0430
+
+    * changelog
+
+commit 0aa31ded5bc4bdf474479b9595dc9bf570da2cda
 Author: jose perez <sinfallas@gmail.com>
 Date:   Wed Jul 22 13:11:14 2015 -0430
 
